# Kali-Recon-Web

./: .env.example  .gitattributes  .gitignore  AGENTS.md  IMPLEMENTATION_REPORT.md  LICENSE  Makefile  README.md  compose.prebuilt.yml  compose.yml  manage.py  prompt.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: images.yml  test.yml
config/: asgi.py  celery.py  env.py  settings.py  urls.py  wsgi.py
docker/: app.Dockerfile  entrypoint.sh  scanner.Dockerfile
docker/wordlists/: common.txt  medium.txt
fixtures/dirsearch/: malformed.json  results.csv  results.json
fixtures/nmap/: malformed.xml  ports.xml
fixtures/nuclei/: malformed.jsonl  results.jsonl
recon/: admin.py  apps.py  constants.py  context_processors.py  forms.py  models.py  tasks.py  urls.py  views.py
recon/management/commands/: cleanup_orphan_scanners.py  create_admin.py
recon/migrations/: 0001_initial.py
recon/parsers/: dirsearch.py  nmap.py  nuclei.py
recon/services/: artifacts.py  docker_runner.py  report.py  target.py  workflow.py
recon/static/recon/: app.css  create.js  detail.js
recon/templates/: base.html
recon/templates/recon/: dashboard.html  (+5 more)
recon/tests/: conftest.py  test_artifacts.py  test_expert_commands.py  test_parsers.py  test_plugins.py  test_report.py  test_runner.py  test_target.py  test_views.py  test_workflow.py
recon/tools/: __init__.py  base.py  dirsearch.py  http_probe.py  nmap.py  nuclei.py  subdomains.py  tls.py  whatweb.py
scripts/: create-admin.py  install.sh  smoke-test.sh  wait-for-services.sh  wait_for_services.py
